fix: Header size on mobile

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
     align-items:center;
     box-shadow: 2px 2px 10px 2px red;
-    height: 20vh;
+    height: 15vh;
 }
 
 .logo__tittle--container {
@@ -138,4 +138,10 @@
         color: white;
     }
 
+}
+
+@media screen and (max-width:480px) {
+    .site__header {
+        height: 10vh;
+    }
 }
